it has been a sick week, hence very unproductive; hopefully better next week